--- a/app/src/main/res/layout/fragment_tou_single.xml
+++ b/app/src/main/res/layout/fragment_tou_single.xml
@@ -246,7 +246,7 @@
             android:id="@+id/aciv_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_gzda"
+            tools:src="@drawable/ic_gzda"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
